--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: #313131;
+  background-color: #1b1d1b;
   display: flex;
   flex-direction: column;
   align-items: center;
