--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ a {
   width: 100%;
   border: 1px solid #7a7878;
   border-radius: 8px;
-  background-color: #7a7878;
+  background-color: #3a3a3a;
   padding: 5px 15px;
 }
 
